--- a/app/client/app.html
+++ b/app/client/app.html
@@ -6,8 +6,9 @@
 		<meta name="description" content="Solvers - Find development resources for your science project">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="alternate" type="application/rss+xml" title="Solvers.IO RSS Feed" href="http://solvers.io/rss/projects" />
-		<link href="//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,700" rel="stylesheet" type="text/css">
+		<link href="//fonts.googleapis.com/css?family=Open+Sans:300,800italic,400italic,700italic,400,300,700" rel="stylesheet" type="text/css">
 		<link href="//fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet" type="text/css">
+		<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
 		{{> header}}
